# apollo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COPYING  Dockerfile  LICENSE  Makefile  Pipfile  Procfile  Procfile.docker  README  README.md  apollo_wsgi.py  build.sh  build.xml  buildout.cfg  circle.yml  convert-po2json  docker-compose.yml  fabfile.py  gunicorn.conf  gunicorn.py  init  manage.py  production.cfg  psc-requires.txt  psc.wsgi  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docker.txt  requirements.txt  requires.txt  run  run_tests.sh  settings.ini-local  settings.py  setup.py  update_version.sh  urls.py  (+3 more)
.circleci/: config.yml
.tx/: config
analyses/: datagenerator.py
analysis/: analyzer.py
apollo/: __init__.py  application.cfg  application.py  assets.py  babel-javascript.cfg  babel.cfg  conftest.py  constants.py  core.py  default.cfg  development_settings.py  factory.py  forms.py  helpers.py  manage.py  models.py  production_settings.py  rmodels.py  rservices.py  run.py  runner.py  security_ext_forms.py  sentry_ext.py  services.py  settings.cfg  settings.py  sse.py  tasks.py  testing_settings.py  utils.py  wsgi.py  wtforms_ext.py
apollo/accounts/: documents.py  models.py  views.py
apollo/altauth/: documents.py  utils.py
apollo/analyses/: aggregation.py  common.py  dashboard.py  views_analysis.py  voting.py
apollo/api/: common.py  decorators.py  hooks.py  schema.py
apollo/apollo/: settings.py  urls.py  wsgi.py
apollo/cli/: __init__.py  messages.py  users.py
apollo/core/: documents.py  forms.py  helpers.py  middleware.py  models.py  parser.py  querysets.py  urls.py  views.py
apollo/dal/: models.py  serializers.py  service.py  test_utils.py  utils.py
apollo/deployments/: __init__.py  forms.py  models.py  rmodels.py  serializers.py  services.py  tasks.py  test_deployments.py  tests.py  utils.py  views_deployments.py
apollo/formsframework/: __init__.py  api.py  custom_fields.py  forms.py  models.py  parser.py  rmodels.py  serializers.py  services.py  tasks.py  test_formsframework.py  tests.py  utils.py  views_forms.py
apollo/frontend/: __init__.py  assets.py  dashboard.py  filters.py  forms.py  helpers.py  locations.py  models.py  participants.py  permissions.py  querysets.py  submissions.py  template_filters.py  views.py  views_admin.py  views_analysis.py  views_auth.py  views_dashboard.py  views_forms.py  views_locations.py  views_messages.py  views_messaging.py  views_odk.py  views_participants.py  views_submissions.py  views_users.py
apollo/integration/: conftest.py  test_authentication.py  test_demo.py
apollo/locations/: __init__.py  api.py  filters.py  forms.py  models.py  rmodels.py  serializers.py  services.py  tasks.py  utils.py  views_locations.py
apollo/manage/: __init__.py  auth.py  celery.py  deployments.py  gunicorn.py  messages.py  permissions.py  setup.py  submissions.py  users.py
apollo/messagelog/: documents.py
apollo/messaging/: __init__.py  filters.py  forms.py  helpers.py  models.py  outgoing.py  parsers.py  rmodels.py  serializers.py  services.py  tasks.py  test_messaging.py  tests.py  utils.py  views.py  views_messages.py  views_messaging.py
apollo/odk/: tests.py  utils.py  views_odk.py
apollo/participants/: __init__.py  api.py  filters.py  forms.py  models.py  rmodels.py  serializers.py  services.py  tasks.py  utils.py  views_participants.py
apollo/process_analysis/: aggregation.py  common.py  tests.py  views_process.py  voting.py
apollo/pwa/: views_pwa.py
apollo/resttools/: documents.py
apollo/result_analysis/: results.py  turnout.py  views_results.py
apollo/sse/: views_sse.py
apollo/static/: package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
apollo/submissions/: __init__.py  aggregation.py  filters.py  forms.py  incidents.py  mapreduce_helpers.py  models.py  recordmanagers.py  rmodels.py  serializers.py  services.py  tasks.py  tests.py  utils.py  views_submissions.py
apollo/testutils/: factory.py  fixtures.py
apollo/translations/: javascript.pot  messages.pot
apollo/users/: __init__.py  decorators.py  forms.py  models.py  rmodels.py  services.py  tasks.py  utils.py
apollo/ushahidi/: tasks.py
assets/: build.xml
assets/css/: datePicker.css  facebox.css  layout.css  nav.css  piechart.css  style.css
assets/js/: application-min.js  backbone-relational.js  backbone-tastypie.js  custom.js  date.js  dropmenu.js  easySlider1.7.js  facebox.js  jquery.datePicker.js  jquery.ui.throbber.js  moocanvas.js  nigeria.js  paginated_collection.js  pie.js  piechart.js
charts/: statistics.py  urls.py  views.py
core/: admin.py  api.py  app.py  filters.py  forms.py  managers.py  memcached.py  models.py  querysets.py  resources.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  location.py  observer.py  submission.py
core/templatetags/: apollo.py
doc/: environment.rst
doc/release-notes/: release-notes-2.7.11.md  release-notes-2.7.7.md  release-notes-2.7.8.md  release-notes-2.8.1.md  release-notes-2.8.2.md  release-notes-3.0.md  release-notes-3.1.1.md
formbuilder/: admin.py  models.py  tests.py
frontend-tests/: SpecRunner.html
frontend-tests/spec/: models.spec.js
gp.recipe.pip/: CHANGES.txt  CONTRIBUTORS.txt  MANIFEST.in  PKG-INFO  README.txt  setup.py
gp.recipe.pip/gp.recipe.pip.egg-info/: PKG-INFO  SOURCES.txt  (+3 more)
messagelog/: app.py  models.py  tests.py  urls.py  views.py
migrations/: env.py
outboundsms/: tests.py
postgis/: Dockerfile  initdb-postgis.sh
psc/: admin.py  app.py  decorators.py  forms.py  models.py  moe.py  queries.py  stats.py  tests.py  urls.py  views.py
requirements/: dev.in  dev.txt  prod.in  prod.txt
templates/: Procfile.in  creation.patch  fabtemplate.py  libgeos.patch  nginx.conf  router.patch  uwsgi.ini
webapp/: admin.py  api.py  app.py  custom_spamlib.py  getlocal.py  handlers.py  models.py  psc_helpers.py  tasks.py  urls.py  utility_models.py  views.py
zambia/: admin.py  api.py  models.py  stats.py  urls.py  views.py
(+728 files in other folders)
