[tool.poetry]
name = "apollo"
version = "3.2.0"
description = "A robust data collection and analysis tool to document political processes"
authors = ["Tim Akinbo <takinbo@timbaobjects.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/nditech/apollo"
keywords = ["elections", "political-parties", "election-quick-count", "pvt", "election-analysis",  "election-data", "elections-toolkit"]

[tool.poetry.dependencies]
python = "~3.11.9"
aniso8601 = "0.82"
Arpeggio = "1.7.1"
awesome-slugify = "1.6.5"
boto3 = "^1.34.149"
cachetools = "^5.4.0"
celery = "^5.4.0"
filedepot = "^0.11.0"
Flask = "^3.0.3"
Flask-Admin = "^1.6.1"
flask-apispec = "^0.11.4"
Flask-Assets = "^2.1.0"
Flask-BabelEx = "^0.9.4"
Flask-Cors = "^4.0.1"
Flask-Gravatar = "^0.5.0"
Flask-HTTPAuth = "^4.8.0"
Flask-JWT-Extended = "^4.6.0"
Flask-Login = "^0.6.3"
Flask-Mail = "^0.10.0"
flask-menu = "0.7.0"
Flask-Migrate = "^4.0.7"
Flask-Principal = "^0.4.0"
flask-redis = "^0.4.0"
Flask-Script = "^2.0.6"
Flask-SQLAlchemy = "^3.1.1"
Flask-SSLify = "^0.1.5"
Flask-Uploads = "^0.2.1"
Flask-Webpack = "^0.1.0"
Flask-WTF = "^1.2.1"
GeoAlchemy2 = "^0.15.2"
geojson = "^3.1.0"
gevent = "^24.2.1"
GitPython = "^3.1.43"
gunicorn = "^22.0.0"
honcho = "^1.1.0"
itsdangerous = "^2.2.0"
Jinja2 = "^3.1.4"
loginpass = "^0.5"
lxml = "^5.2.2"
Mako = "^1.3.5"
MarkupSafe = "^2.1.5"
marshmallow-sqlalchemy = "^1.0.0"
netifaces = "0.10.9"
networkx = "2.1"
numpy = "^2.0.1"
openpyxl = "2.5.0"
pandas = "^2.2.2"
parsimonious = "0.8.0"
Parsley = "1.3"
pillow = "^10.4.0"
prettyconf = "^2.2.1"
prometheus-client = "^0.20.0"
psutil = "^6.0.0"
psycopg2-binary = "^2.9.9"
python-dateutil = "^2.9.0.post0"
python-editor = "^1.0.4"
python-magic = "^0.4.27"
pytz = "^2024.1"
qrcode = "^7.4.2"
raven = "^6.10.0"
redis = "^5.0.7"
regex = "^2024.7.24"
requests = "^2.32.3"
shapely = "^2.0.5"
six = "1.11.0"
SQLAlchemy = "^2.0.31"
sqlalchemy-json = "^0.7.0"
SQLAlchemy-Utils = "^0.41.2"
tablib = "^3.6.1"
Unidecode = "0.4.21"
webassets = "^2.0"
Werkzeug = "^3.0.3"
whitenoise = "^6.7.0"
wrapt = "^1.16.0"
WTForms = "^3.1.2"
WTForms-Alchemy = "^0.18.0"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
greenlet = "^3.0.3"
pyxform = "~=0.11.1"
Authlib = "^1.3.1"
marshmallow = "^3.21.3"
cryptography = "^43.0.0"
apispec = "^6.6.1"
flask-security-too = "^5.5.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
coverage = "^7.6.0"
flake8 = "^7.1.0"
Flask-DebugToolbar = "^0.15.1"
Flask-Testing = "^0.8.1"
mimesis = "^17.0.0"
pip-tools = "^7.4.1"
pytest = "^8.3.2"
selenium = "^4.23.1"
chromedriver-autoinstaller = "^0.6.4"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
